--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
                                     <h2>Quick Links</h2>
                                     <a href="disclaimer.html">Disclaimer</a>
                                     <a href="review.html">Reviews</a>
-                                    <a href="faq.html">FQAs</a>
+                                    <a href="faq.html">FAQs</a>
                                 </div>
                             </div>
                         </div>
