--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dunright Inspections - Services</title>
+        <title>Dunright Inspections - Disclaimer</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Consulting Website Template Free Download" name="keywords">
         <meta content="Consulting Website Template Free Download" name="description">
@@ -74,98 +74,30 @@
                 </div>
                 <!-- Nav Bar End -->
 
-        <!-- Service Start -->
-        <div class="service mt-125">
+
+        <!-- Feature Start -->
+        <div class="feature mt-125">
             <div class="container">
-                <div class="section-header">
-                    <h2>Our Inspection Services</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-1.png" alt="Icon">
-                            <h3>Business Strategy</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
+                <div class="row align-items-end">
+                    <div class="col-md-6">
+
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-2.png" alt="Icon">
-                            <h3>Project Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
+                    <div class="col-md-6">
+                        <div class="section-header">
+                            <p>Terms of Service</p>
+                            <h2>Disclaimer</h2>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-3.png" alt="Icon">
-                            <h3>Market Research</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-4.png" alt="Icon">
-                            <h3>Human Resource</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-5.png" alt="Icon">
-                            <h3>Online Business</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-6.png" alt="Icon">
-                            <h3>Capital Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-7.png" alt="Icon">
-                            <h3>Business Insurance</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-8.png" alt="Icon">
-                            <h3>Online Marketing</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
+                        <p>
+                            The Inspection Report Does Not Constitute A Warranty, An Insurance Policy Or A Guarantee Of Any Kind. The Inspection Report Reflects An Observation Of Certain Listed Items Of The Property As Of The Date And Time Of The Inspection And Is Not A Listing Of Repairs To Be Made. The Inspection Report Is Not Intended For Use As A Guide In Re Negotiating The Sales Price Of The Property Nor Should It Be Construed As An Opinion Of The Value Of The Property. The Seller May Or May Not Be Required To Repair Deficiencies Reflected In This Inspection Report And That Determination' Should Be Made By You (The Buyer), The Seller, Your Real Estate Agent(S) And Your Attorneys. We Recommend That You Attend The Actual Inspection.                        
+                        </p>
+
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Service End -->
-
+        <!-- Feature End -->
+        
+        
 
 
 
