--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dunright Inspections - Services</title>
+        <title>Dunright Inspections - FAQ</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Consulting Website Template Free Download" name="keywords">
         <meta content="Consulting Website Template Free Download" name="description">
@@ -74,98 +74,32 @@
                 </div>
                 <!-- Nav Bar End -->
 
-        <!-- Service Start -->
-        <div class="service mt-125">
+
+        <!-- Feature Start -->
+        <div class="feature mt-125">
             <div class="container">
-                <div class="section-header">
-                    <h2>Our Inspection Services</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-1.png" alt="Icon">
-                            <h3>Business Strategy</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
+                <div class="row align-items-end">
+                    <div class="col-md-6">
+                        <div class="feature-img">
+                            <img src="img/business-man.png" alt="Image">
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-2.png" alt="Icon">
-                            <h3>Project Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
+                    <div class="col-md-6">
+                        <div class="section-header">
+                            <p>Our Feature</p>
+                            <h2>Why Choose Us?</h2>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-3.png" alt="Icon">
-                            <h3>Market Research</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-4.png" alt="Icon">
-                            <h3>Human Resource</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-5.png" alt="Icon">
-                            <h3>Online Business</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-6.png" alt="Icon">
-                            <h3>Capital Management</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-7.png" alt="Icon">
-                            <h3>Business Insurance</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-item">
-                            <img src="img/icon-8.png" alt="Icon">
-                            <h3>Online Marketing</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium ornare velit non
-                            </p>
-                            <a href="">Read More</a>
-                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus 
+                        </p>
+
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Service End -->
-
+        <!-- Feature End -->
+        
+        
 
 
 
