--- a/review.html
+++ b/review.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Confer - Consulting Website Template Free Download</title>
+        <title>Dunright Inspections - Reviews</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Consulting Website Template Free Download" name="keywords">
         <meta content="Consulting Website Template Free Download" name="description">
@@ -114,11 +114,11 @@
             <div class="container">
                 <div class="section-header">
                     <p>What our clients think:</p>
-                    <h2>100% Positive Customer Reviews</h2>
+                    <h2>100% Satisfied Customer Reviews</h2>
                 </div>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
-                        <img src="img/testimonial-1.jpg" alt="Image">
+                        <img src="img/heart.png" alt="Image">
                         <p>
                             At Damianos Sotheby’s International Realty, we consistently use Jacques Christofilis of Dunright Home & Building Inspections, for home inspections in The Commonwealth of the Bahamas. It was therefore natural that I recommended Jacques Christofilis to my customer ‘JJ’ who was looking at one of our houses. This is what ‘JJ’ had to say about his experience with Christofilis and Dunright:
                         </p>
@@ -137,7 +137,7 @@
                         <h3>Damianos Sotheby’s International Realty</h3>
                     </div>
                     <div class="testimonial-item">
-                        <img src="img/testimonial-2.jpg" alt="Image">
+                        <img src="img/heart2.png" alt="Image">
                         <p>
                             I wanted to thank you for the prompt, concise and thorough inspection you performed on the Harmony Hill home my wife and I were interested in purchasing.
                         </p>
@@ -152,7 +152,7 @@
                         <h3>Home Owner</h3>
                     </div>
                     <div class="testimonial-item">
-                        <img src="img/testimonial-3.jpg" alt="Image">
+                        <img src="img/heart.png" alt="Image">
                         <p>
                             I am happy to recommend to your institution the services of Jacques Christofilis who has done several home and commercial building inspections on our behalf.
                         </p>
@@ -167,12 +167,22 @@
                         <br> Coldwell Banker/Lightbourn Realty</h3>
                     </div>
                     <div class="testimonial-item">
-                        <img src="img/testimonial-4.jpg" alt="Image">
+                        <img src="img/heart2.png" alt="Image">
                         <p>
-                            Sed in lectus eu eros tincidunt cursus. Aliquam eleifend velit nisl. Sed et posuere urna, ut vestibulum massa. Integer quis magna
+                            First class report which gives me plenty of info on technical areas which I simply don't have the knowledge of myself.
                         </p>
-                        <h2>Client Name</h2>
-                        <h3>Profession</h3>
+
+                        <p>
+                            I was highly satisfied with your level of service and professionalism and will not hesitate to recommend you to friends and colleagues alike.
+                        </p>
+
+                        <p>                            
+                            I'm amazed more people don't use your service. What sort of person buys a home without getting it inspected?
+                            <br>
+                            Best regards,
+                        </p>
+                        <h2>Andrew Davies</h2>
+                        <h3>Home Owner</h3>
                     </div>
                 </div>
             </div>
@@ -206,7 +216,7 @@
                                     <h2>Quick Links</h2>
                                     <a href="disclaimer.html">Disclaimer</a>
                                     <a href="review.html">Reviews</a>
-                                    <a href="faq.html">FQAs</a>
+                                    <a href="faq.html">FAQs</a>
                                 </div>
                             </div>
                         </div>
