--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav ml-auto">
                                 <a href="index.html" class="nav-item nav-link">Home</a>
-                                <a href="about.html" class="nav-item nav-link active">About</a>
+                                <a href="about.html" class="nav-item nav-link">About</a>
                                 <a href="service.html" class="nav-item nav-link">What We Do</a>
                                 <a href="faq.html" class="nav-item nav-link">Faq's</a>
                                 <a href="review.html" class="nav-item nav-link">Reviews</a>
@@ -84,12 +84,12 @@
                             <img src="img/carousel-1.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Fastest Way to Achieve Success</h1>
+                            <h1>Welcome</h1>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac consequat at lectus in malesuada
+                                Welcome to Dunright Home & Building Inspections, the first licensed home and building inspection company in The Bahamas. We are based in New Providence (Nassau) but are also available to do inspections throughout all the many islands and cays of The Bahamas.                            
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn" href=""><i class="fa fa-link"></i>Get Started</a>
+                                <a class="btn" href="service.html"><i class="fa fa-link"></i>Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -98,12 +98,12 @@
                             <img src="img/carousel-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Your Success Our Achievement</h1>
+                            <h1>What is a home inspection?</h1>
                             <p>
-                                Morbi sagittis turpis id suscipit feugiat. Suspendisse eu augue urna. Morbi sagittis, orci sodales varius fermentum, tortor
+                                A home inspection, or home survey, is a thorough and systematic professional evaluation of the condition of a property and its structures. It is a complete physical exam of the general integrity of a home or building and its various components; structural, mechanical, electrical and plumbing.
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn" href=""><i class="fa fa-link"></i>Get Started</a>
+                                <a class="btn" href="service.html"><i class="fa fa-link"></i>Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 Sed ultrices, est eget feugiat accumsan, dui nibh egestas tortor, ut rhoncus nibh ligula euismod quam. Proin pellentesque odio
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn" href=""><i class="fa fa-link"></i>Get Started</a>
+                                <a class="btn" href="service.html"><i class="fa fa-link"></i>Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -126,39 +126,7 @@
         </div>
         <!-- Carousel End -->
 
-        <!-- About Start -->
-        <div class="about">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <div class="about-img">
-                            <div class="about-img-1">
-                                <img src="img/about-2.jpg" alt="Image">
-                            </div>
-                            <div class="about-img-2">
-                                <img src="img/about-1.jpg" alt="Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="section-header">
-                            <p>Learn About Us</p>
-                            <h2>25 Years Experience</h2>
-                        </div>
-                        <div class="about-text">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
-                            </p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
-                            </p>
-                            <a class="btn" href="">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- About End -->
+
 
 
 
