--- a/review.html
+++ b/review.html
@@ -63,7 +63,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link active">About</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">What We Do</a>
                         <a href="faq.html" class="nav-item nav-link">Faq's</a>
                         <a href="review.html" class="nav-item nav-link">Reviews</a>
