--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">What We Do</a>
+                        <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="faq.html" class="nav-item nav-link">Faq's</a>
                         <a href="review.html" class="nav-item nav-link">Reviews</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="section-header">
-                            <h2>25 Years Experience</h2>
+                            <h2>25 Years of Experience</h2>
                         </div>
                         <div class="about-text">
                             <p>
@@ -120,9 +120,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="section-header">
-                            <p>Our Mission</p>
-                            <h2>Why Choose Us?</h2>
+                            <h2>Our Mission</h2>
                         </div>
+                        <div>
                         <p>
                             Dunright Home & Building Inspections strives to provide our clients with the highest quality of service possible. Our only agenda is to present an unbiased, honest, thorough assessment of the property’s condition. We report our findings in a customized, detailed, illustrated report to assist buyers in making an informed decision about their real estate purchase. Dunright takes pride in abiding by the highest standards of technical and ethical performance set forth in The Standards of Practice and Code of Ethics of The American Society of Home Inspectors (ASHI).
                         </p>
@@ -130,6 +130,7 @@
                         <p>
                             Should you be in the market for a new home in The Bahamas or are considering selling the home you have, we urge you to contact us or request a home inspection from your BREA agent. We would be glad to answer any questions you might have or provide a quote. Dunright Home & Building Inspections looks forward to the opportunity to be of assistance in your real estate transaction. 
                         </p>
+                        </div>
                         <div class="row counters">
                             <div class="col-6">
                                 <i class="fa fa-user"></i>
