--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="navbar-nav ml-auto">
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link">What We Do</a>
+                                <a href="service.html" class="nav-item nav-link">Services</a>
                                 <a href="faq.html" class="nav-item nav-link">Faq's</a>
                                 <a href="review.html" class="nav-item nav-link">Reviews</a>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -112,9 +112,18 @@
                             <img src="img/carousel-3.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Your Business Our Effort</h1>
+                            <h1>Our inspection report</h1>
                             <p>
-                                Sed ultrices, est eget feugiat accumsan, dui nibh egestas tortor, ut rhoncus nibh ligula euismod quam. Proin pellentesque odio
+                                The Dunright Final Inspection Report is no mere checklist. It is a customized, detailed, room by room assessment of a home or commercial building, including the interior, exterior, any common areas and additional structures on the property.
+
+                                <!-- Use in different section... somewhere...-->
+                                
+                                <!--
+                                <li>The report is delivered within 72 hours to give you vital information about your prospective purchase in a timely manner to assist in your real estate transaction.</li>
+                                <li>Data and digital photos provide clear documentation of the inspector’s findings</li>
+                                <li>Over 600 items are evaluated and reported on in a computer generated factual document for easy reference.</li>
+                                <li>We provide suggestions or recommendations of repairs, replacement, further review or maintenance required.</li>
+                                <li>The report can be e-mailed for your convenience or we can provide a hard copy if you prefer.</li>-->
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn" href="service.html"><i class="fa fa-link"></i>Get Started</a>
