--- a/review.html
+++ b/review.html
@@ -64,7 +64,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">What We Do</a>
+                        <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="faq.html" class="nav-item nav-link">Faq's</a>
                         <a href="review.html" class="nav-item nav-link">Reviews</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
