--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="about.html" class="nav-item nav-link">About</a>
                                 <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="faq.html" class="nav-item nav-link">Faq's</a>
+                                <a href="faq.html" class="nav-item nav-link">FAQ''s</a>
                                 <a href="review.html" class="nav-item nav-link">Reviews</a>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
@@ -81,17 +81,114 @@
                 <div class="row align-items-end">
                     <div class="col-md-6">
                         <div class="feature-img">
-                            <img src="img/business-man.png" alt="Image">
+                            <img src="" alt="Image">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="section-header">
-                            <p>Our Feature</p>
-                            <h2>Why Choose Us?</h2>
+                            <h2>Frequently Asked Questions</h2>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus 
+                            This list of frequently asked questions and answers can provide you with information on the home inspection process and its benefits.  If your question is not covered here, please contact us at Dunright Home & Building Inspections for more detailed information.
                         </p>
+
+                        <div class="section-header">
+                            <h3>What is a home inspection?</h3>
+                        </div>
+                        <p>
+                            A home inspection is an objective, visual examination of the physical structure and systems of a home from the roof to the foundation.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What does an inspection include?</h3>
+                        </div>
+                        <p>
+                            The report will review the condition of the home’s central air conditioning system, interior plumbing, electrical system, the roof, attic and visible insulation,walls, ceilings, floors, windows and doors, built-in appliances, the foundation and visible structures on the property.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>Why do I need an inspection?</h3>
+                        </div>
+                        <p>
+                            The purchase of a home is probably the largest single investment you will ever make. You should learn as much as you can about the condition of the property and the need for any major repairs before you buy, to minimize unpleasant surprises and difficulties afterwards. It will also point out the positive maintenance necessary to keep it in good shape. The inspection report will give you a much clearer understanding of the property you are about to purchase. If you are considering selling your home, an inspection prior to listing will enable you to make repairs that will put the house in a better selling condition. If you already are a homeowner, a home inspection can identify problems in the making and suggest preventive measures that might help you avoid costly future repairs.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>Can’t I do it myself or have my brother-in-law, the contractor check it out?</h3>
+                        </div>
+                        <p>
+                            Even the most experienced homeowner lacks the knowledge and expertise of a trained inspector who has inspected hundreds of homes in his career. Home Inspection is a unique discipline separate from mere knowledge of construction. A trained inspector is familiar with all the elements of home construction, their proper installation and maintenance. He also understands how the home’s systems and components are intended to function and why they fail. Above all, most buyers find it difficult to remain objective about the house they really want and this can affect their judgement. For the most accurate information, it is best to obtain an impartial third-party opinion by a qualified expert in the field.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>Can a house fail an inspection?</h3>
+                        </div>
+                        <p>
+                            No. A professional home inspection is an examination of the current condition of a home. It is not an appraisal, which determines market value, nor a government inspection to verify code compliance. A home inspector, therefore, will not pass or fail a house but rather describe its physical condition and indicate what may need repair or replacement.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3> Do I have to be there during the inspection?</h3>
+                        </div>
+                        <p>
+                            It is not necessary for you to be present for the inspection but it is recommended. You will be able to observe the inspector and ask questions directly that you might have about the property. You will also find the written report easier to understand if you’ve seen the home first hand through the inspector’s eyes.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What if the report reveals problems?</h3>
+                        </div>
+                        <p>
+                            No house is perfect. If the inspector identifies problems, it does not mean you should not buy the home, only that you will know in advance what to expect. The seller may make the necessary repairs or adjust the purchase price accordingly if there are major deficiencies. Or if you choose not to become involved in future repair work then this information prior to closing will be extremely helpful to you in that decision. It is a useful tool for you, your agent and the seller too to take into negotiations.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What if the home is sold “as is”?</h3>
+                        </div>
+                        <p>
+                            This may be the best of all reasons to get an inspection! As the seller your home will likely sell quickly for the highest price when every condition is disclosed. When you are purchasing a home "as is", it is very important to be aware of exactly what "as is" entails. A written assessment by an unbiased expert will identify any problems, apparent minor defects as well as more major or hidden deficiencies. Then all parties in the real estate transaction are on the same page with no uncertainty or surprises. A home inspection gives buyers the knowledge to proceed with confidence. A good REALTOR with the best interests of his client in mind will always recommend a home inspection.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>If I am buying a brand new home or having my home custom built, should I still get it inspected? </h3>
+                        </div>
+                        <p>
+                            Absolutely. Newly constructed homes often seem to have more problems than a lived in home just because no one has lived there yet to find them and fix them! Also even the most reputable of contractors must rely on their workmen and can overlook a detail or a potentially serious problem with the complexity of building a home or multi-unit complex. Human error, tight time schedules and cost constraints add to the equation. Save yourself the aggravation and sleepless nights by having the safety net provided with a home inspection. If you are having your home custom-built, Dunright does New Construction Stage Inspections to ensure the highest quality control at each step of the building process and sets the tone to your builder that you expect every detail from foundation to roof to be done right
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>How long does an inspection take?</h3>
+                        </div>
+                        <p>
+                            A typical inspection of a 3-bedroom, 2-bath home or condominium takes approximately three to three and a half hours. Larger estates and certain properties in need of significant maintenance can take longer. The age of the property is also a determining factor.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What do I get in writing?</h3>
+                        </div>
+                        <p>
+                            Our 600+ inspection findings are packaged in an attractive, easy-to-understand, state-of-the-art report  detailed room by room. We use digital photography to help clarify inaccessible or problematic areas and we suggest repairs, replacement or maintenance necessary to remedy a defect or bring it up to standard.
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What will it cost?</h3>
+                        </div>
+                        <p>
+                            The inspection fee for a typical one-family house varies geographically, as does the cost of housing. Similarly, within a given area, the inspection fee may vary depending on a number of factors such as the square footage, number of bedrooms and baths, age of the home and/or any additional structures on the property. Inspection fees start at $300 for a 2-bedroom, 1-bath home or condominium. Please call us for a quote.
+                        </p>
+
+                        <p>
+                            However, financial experts advise not to let cost be a factor in deciding whether or not to have a home inspection. The sense of security and knowledge gained from an inspection is well worth the cost every time and purchasing a home without getting an inspection first is simply gambling. 
+
+                        </p> <br><br>
+
+                        <div class="section-header">
+                            <h3>What is ASHI?</h3>
+                        </div>
+                        <p>
+
+                        </p> <br><br>
+
+                        
 
                     </div>
                 </div>
