--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="about.html" class="nav-item nav-link">About</a>
                                 <a href="service.html" class="nav-item nav-link">Services</a>
-                                <a href="faq.html" class="nav-item nav-link">Faq's</a>
+                                <a href="faq.html" class="nav-item nav-link">FAQ''s</a>
                                 <a href="review.html" class="nav-item nav-link">Reviews</a>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
